--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 @import "./components/common/LineageDisplay.css";
 @import "./components/common/LineageTree.css";
 @import "./components/common/MissingSkillsDisplay.css";
+@import "./components/MissingSkillsModal.css";
 @import "./components/ParentCard.css";
 @import "./components/common/PairedParentCard.css";
 @import "./components/common/PlaceholderCard.css";
