--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 @import "./components/AddParentModal.css";
 @import "./components/BreedingPlannerModal.css";
 @import "./components/BreedingSuggestions.css";
+@import "./components/common/CheckableSkillItem.css";
 @import "./components/common/DualListBox.css";
 @import "./components/FolderTab.css";
 @import "./components/common/ContextMenu.css";
